<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/user_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUserId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/user_name_text_placeholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/user_pw_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPWId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPW"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPWId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_pw_text_placeholder"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLoginId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:backgroundTint="@color/primary"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPWId"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/buttonRegisterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:backgroundTint="@color/white"
        android:text="@string/button_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginId"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/buttonForgotPWId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:backgroundTint="@color/white"
        android:text="@string/button_forgot_pw"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegisterId"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginId"
        android:textAllCaps="true"/>

    <ImageView
        android:id="@+id/imageViewResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_botton"
        app:circularflow_angles="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForgotPWId"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>